--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "seed": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.4.1",
+    "@sentry/tracing": "^6.4.1",
     "aws-sdk": "^2.908.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
